--- a/app/src/main/res/layout/activity_my_address.xml
+++ b/app/src/main/res/layout/activity_my_address.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -49,12 +49,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginHorizontal="@dimen/_15sdp"
+                        android:fontFamily="@font/sans_medium"
                         android:text="My Address"
                         android:textColor="@color/black"
-                        android:layout_gravity="center_vertical"
-                        android:fontFamily="@font/sans_medium"
-                        android:layout_marginHorizontal="@dimen/_15sdp"
-                        android:textSize="@dimen/_16ssp"/>
+                        android:textSize="@dimen/_16ssp" />
 
                 </LinearLayout>
 
@@ -64,12 +64,147 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:visibility="gone"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="2"
                     tools:listitem="@layout/custom_address_item" />
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/AddressCard"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
+                    app:cardCornerRadius="@dimen/_5sdp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/_5sdp"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:orientation="vertical">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/txt_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="@dimen/_8sdp"
+                                android:fontFamily="@font/sans_regular"
+                                android:text="Jon Deo"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/_14ssp" />
+
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="right"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/type"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/_10sdp"
+                                    android:layout_marginRight="@dimen/_10sdp"
+                                    android:background="@drawable/round_office"
+                                    android:fontFamily="@font/sans_regular"
+                                    android:padding="@dimen/_5sdp"
+                                    android:text="Home"
+                                    android:textColor="@color/colorWhite"
+                                    android:textSize="@dimen/_10ssp" />
+
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+
+                        <TextView
+                            android:id="@+id/address"
+                            android:layout_width="@dimen/_250sdp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:fontFamily="@font/sans_regular"
+                            android:text="Vill-delhi, P.O-delhi, P.S-delhi, Dist-delhi, Pin-47856, delhi"
+                            android:textColor="@color/colorText"
+                            android:textSize="@dimen/_10ssp" />
+
+
+                        <TextView
+                            android:id="@+id/phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:fontFamily="@font/sans_regular"
+                            android:text=""
+                            android:layout_marginHorizontal="@dimen/_8sdp"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="@dimen/_12ssp" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginBottom="@dimen/_5sdp"
+                            android:orientation="horizontal">
+
+
+                            <TextView
+                                android:id="@+id/remove_btn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_8sdp"
+                                android:background="@drawable/round_home"
+                                android:fontFamily="@font/sans_regular"
+                                android:gravity="right"
+                                android:padding="@dimen/_8sdp"
+                                android:text="REMOVE"
+                                android:textColor="@color/colorText"
+                                android:textSize="@dimen/_12ssp" />
+
+
+                            <TextView
+                                android:id="@+id/edit_btn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/_15sdp"
+                                android:background="@drawable/round_home"
+                                android:fontFamily="@font/sans_regular"
+                                android:gravity="right"
+                                android:padding="@dimen/_8sdp"
+                                android:text="EDIT"
+                                android:textColor="@color/colorText"
+                                android:textSize="@dimen/_12ssp" />
+
+
+                        </LinearLayout>
+
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:background="@color/colorGray"
+                            android:visibility="gone" />
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/add_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -82,7 +217,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sans_regular"
-                        android:text="Edit Address"
+                        android:text="Add Address"
                         android:textColor="#EFA230"
                         android:textSize="@dimen/_12ssp" />
 
