--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -109,6 +109,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/product_name"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -144,6 +145,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/quantity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -218,6 +220,7 @@
 
 
                     <TextView
+                        android:id="@+id/discount_percentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/_10sdp"
@@ -302,6 +305,7 @@
 
 
                 <TextView
+                    android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
