--- a/app/src/main/res/layout/single_populer_item.xml
+++ b/app/src/main/res/layout/single_populer_item.xml
@@ -19,11 +19,12 @@
             android:background="@drawable/discount_bg">
 
             <TextView
+                android:id="@id/discount_percentage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sans_regular"
                 android:padding="@dimen/_3sdp"
-                android:text="21% OFF"
+                android:text="% OFF"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
 
@@ -39,7 +40,8 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_120sdp"
-                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:padding="@dimen/_5sdp"
                 android:src="@drawable/tata_tea" />
 
             <TextView
@@ -65,6 +67,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/discounted_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_8sdp"
@@ -75,6 +78,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:id="@+id/original_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
@@ -92,56 +96,56 @@
                     android:layout_height="@dimen/_25sdp"
                     android:layout_gravity="center"
                     android:background="@drawable/btn_add_bg"
+                    android:elevation="@dimen/_10sdp"
                     android:fontFamily="@font/sans_regular"
                     android:gravity="center"
                     android:text="Add"
-                    android:elevation="@dimen/_10sdp"
                     android:textColor="@color/purple_500" />
 
                 <LinearLayout
 
-                    android:backgroundTint="@color/purple_500"
-                    android:layout_gravity="center"
                     android:id="@+id/IncDec"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
                     android:background="@drawable/round_add_new_address"
+                    android:backgroundTint="@color/purple_500"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/decreaseButton"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:text="-"
+                        android:layout_weight="1"
                         android:backgroundTint="@color/purple_500"
                         android:gravity="center"
-                        android:textSize="@dimen/_14ssp"
+                        android:text="-"
                         android:textColor="@color/white"
-                        android:layout_weight="1"/>
+                        android:textSize="@dimen/_14ssp" />
 
 
                     <TextView
                         android:id="@+id/IncDecText"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:text="0"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="@dimen/_10ssp"
+                        android:text="0"
                         android:textColor="@color/white"
-                        android:layout_weight="1"/>
+                        android:textSize="@dimen/_10ssp" />
 
 
                     <TextView
                         android:id="@+id/increaseButton"
-                        android:backgroundTint="@color/purple_500"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:text="+"
                         android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/purple_500"
                         android:gravity="center"
-                        android:textSize="@dimen/_14ssp"
-                        android:textColor="@color/white"/>
+                        android:text="+"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_14ssp" />
 
                 </LinearLayout>
 
