--- a/app/src/main/res/layout/single_recomended_item.xml
+++ b/app/src/main/res/layout/single_recomended_item.xml
@@ -11,143 +11,145 @@
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardUseCompatPadding="true">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/discount_bg"
-        android:layout_marginTop="@dimen/_10sdp"
-        >
-
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sans_regular"
-            android:padding="@dimen/_3sdp"
-            android:text="21% OFF"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/discount_bg">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/discount_percentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_3sdp"
+                android:text="21% OFF"
+                android:textColor="@color/white"
+                android:textSize="10sp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginHorizontal="@dimen/_8sdp">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_120sdp"
-            android:src="@drawable/img_man_shirt"
-            android:layout_marginLeft="@dimen/_8sdp"/>
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:fontFamily="@font/sans_medium"
-            android:text="Roadstar"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_120sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/img_man_shirt" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:fontFamily="@font/sans_regular"
-                    android:text="₹350"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_3sdp"
-                    android:fontFamily="@font/sans_regular"
-                    android:text="₹120"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/text_title_color"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/addBtn"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:text="Add"
-                android:fontFamily="@font/sans_regular"
-                android:background="@drawable/btn_add_bg"
-                android:layout_gravity="center"
-                android:textColor="@color/purple_500"/>
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/sans_medium"
+                android:text="Roadstar"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <LinearLayout
-
-                android:backgroundTint="@color/purple_500"
-                android:layout_gravity="center"
-                android:id="@+id/IncDec"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:background="@drawable/round_add_new_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/decreaseButton"
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="-"
-                    android:backgroundTint="@color/purple_500"
-                    android:gravity="center"
-                    android:textSize="@dimen/_14ssp"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"/>
-
-
-                <TextView
-                    android:id="@+id/IncDecText"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="0"
-                    android:gravity="center"
-                    android:textSize="@dimen/_10ssp"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"/>
-
-
-                <TextView
-                    android:id="@+id/increaseButton"
-                    android:backgroundTint="@color/purple_500"
-                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="+"
-                    android:layout_gravity="right"
-                    android:gravity="center"
-                    android:textSize="@dimen/_14ssp"
-                    android:textColor="@color/white"/>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/discounted_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:fontFamily="@font/sans_regular"
+                        android:text="₹350"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/original_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_3sdp"
+                        android:fontFamily="@font/sans_regular"
+                        android:text="₹120"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:textColor="@color/text_title_color"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addBtn"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/btn_add_bg"
+                    android:fontFamily="@font/sans_regular"
+                    android:text="Add"
+                    android:textColor="@color/purple_500" />
+
+                <LinearLayout
+
+                    android:id="@+id/IncDec"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/round_add_new_address"
+                    android:backgroundTint="@color/purple_500"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/decreaseButton"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:text="-"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_14ssp" />
+
+
+                    <TextView
+                        android:id="@+id/IncDecText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_10ssp" />
+
+
+                    <TextView
+                        android:id="@+id/increaseButton"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:text="+"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_14ssp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
+
         </LinearLayout>
-
-
-
-    </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
