--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -119,6 +119,7 @@
                         android:textSize="@dimen/_18ssp" />
 
                     <ImageView
+                        android:id="@+id/wish_list"
                         android:layout_width="@dimen/_30sdp"
                         android:layout_height="@dimen/_30sdp"
                         android:layout_gravity="center"
