--- a/app/src/main/res/layout/single_trending_offer.xml
+++ b/app/src/main/res/layout/single_trending_offer.xml
@@ -1,65 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/_3sdp"
-    android:layout_marginVertical="@dimen/_5sdp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_marginVertical="@dimen/_5sdp">
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/TrendingOfferCard"
-            android:layout_width="@dimen/_100sdp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/TrendingOfferCard"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#E6F7F7"
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            app:cardCornerRadius="@dimen/_7sdp"
-            app:cardBackgroundColor="#E6F7F7"
-            >
+            android:orientation="vertical">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/logo_image"
                 android:layout_width="wrap_content"
+                android:layout_height="@dimen/_40sdp"
+                android:padding="@dimen/_10sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/kissam_logo" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_60sdp"
+                android:padding="@dimen/_15sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/kissan_jam" />
+
+
+            <TextView
+                android:id="@+id/item_discount"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-               >
-
-                <ImageView
-                    android:id="@+id/logo_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_40sdp"
-                    android:src="@drawable/kissam_logo"
-                    android:padding="@dimen/_10sdp"
-                    android:scaleType="centerCrop"
-                    />
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_60sdp"
-                    android:src="@drawable/kissan_jam"
-                    android:scaleType="centerCrop"
-                    android:padding="@dimen/_15sdp"
-                    />
+                android:layout_gravity="center"
+                android:background="@drawable/trending_bg"
+                android:fontFamily="@font/sans_regular"
+                android:gravity="center"
+                android:padding="@dimen/_5sdp"
+                android:text="UP TO 20% OFF"
+                android:textColor="@color/white"
+                android:textSize="10sp" />
 
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="UP TO 20% OFF"
-                    android:fontFamily="@font/sans_regular"
-                    android:textSize="10sp"
-                    android:layout_gravity="center"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:background="@drawable/trending_bg"
-                    android:padding="@dimen/_5sdp"
-                    />
+        </LinearLayout>
 
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
