--- a/app/src/main/res/layout/custom_wish_list.xml
+++ b/app/src/main/res/layout/custom_wish_list.xml
@@ -122,24 +122,31 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
-                <ImageView
-                    android:layout_width="@dimen/_15sdp"
-                    android:layout_height="@dimen/_15sdp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_3sdp"
-                    android:src="@drawable/img_cart" />
-
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/add_to_cart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sans_regular"
-                    android:padding="@dimen/_10sdp"
-                    android:text="Add to Cart"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/_12ssp" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_3sdp"
+                        android:src="@drawable/img_cart" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sans_regular"
+                        android:padding="@dimen/_10sdp"
+                        android:text="Add to Cart"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12ssp" />
+
+                </LinearLayout>
 
 
                 <View
