--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/item_no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sans_regular"
@@ -55,11 +56,12 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/sans_regular"
-                        android:text="₹840"
+                        android:text="₹"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
 
