--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -49,6 +49,7 @@
 
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="QTY : 1"
@@ -74,20 +75,77 @@
             android:layout_marginTop="@dimen/_10sdp"
             app:ignore="MissingClass">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Banana"
-                android:textSize="@dimen/_12ssp"
-                android:textColor="@color/colorBlack"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:fontFamily="@font/sans_regular"
+                    android:text="Banana"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_12ssp" />
+
+                <LinearLayout
+                    android:layout_alignParentRight="true"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
+                    android:id="@+id/IncDec"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:background="@drawable/round_add_new_address"
+                    android:backgroundTint="@color/purple_500"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/decreaseButton"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:text="-"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_14ssp" />
+
+
+                    <TextView
+                        android:id="@+id/IncDecText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_10ssp" />
+
+
+                    <TextView
+                        android:id="@+id/increaseButton"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:text="+"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_14ssp" />
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
 
 
             <TextView
+                android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1kg"
+                android:text="quantity"
                 android:textSize="@dimen/_10ssp"
                 android:textColor="@color/colorText"
                 android:layout_marginTop="@dimen/_5sdp"
@@ -102,6 +160,7 @@
 
 
                 <TextView
+                    android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="₹45"
@@ -113,6 +172,7 @@
 
 
                 <TextView
+                    android:id="@+id/original_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="₹50"
@@ -126,14 +186,21 @@
 
 
                 <TextView
+                    android:id="@+id/discount_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10%"
                     android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorRed"
+                    android:textColor="@color/white"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:paddingHorizontal="@dimen/_10sdp"
+                    android:paddingVertical="@dimen/_2sdp"
+                    android:background="@drawable/search_bg"
+                    android:backgroundTint="@color/colorRed"
                     android:fontFamily="@font/sans_regular"
                     android:layout_marginLeft="@dimen/_8sdp"/>
+
+
 
 
             </LinearLayout>
@@ -184,16 +251,16 @@
 <!--                    android:layout_width="wrap_content"-->
 <!--                    android:layout_height="wrap_content"/>-->
 
-                <com.travijuu.numberpicker.library.NumberPicker
-                    android:id="@+id/number_button"
-                    android:layout_width="130dp"
-                    android:layout_height="40dp"
-                    numberpicker:min="1"
-                    numberpicker:max="20"
-                    numberpicker:value="-5"
-                    numberpicker:unit="1"
-                    numberpicker:focusable="false"
-                    numberpicker:custom_layout="@layout/number_picker_custom_layout" />
+<!--                <com.travijuu.numberpicker.library.NumberPicker-->
+<!--                    android:id="@+id/number_button"-->
+<!--                    android:layout_width="130dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    numberpicker:min="1"-->
+<!--                    numberpicker:max="20"-->
+<!--                    numberpicker:value="-5"-->
+<!--                    numberpicker:unit="1"-->
+<!--                    numberpicker:focusable="false"-->
+<!--                    numberpicker:custom_layout="@layout/number_picker_custom_layout" />-->
 
 
             </LinearLayout>
