--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -240,6 +240,7 @@
 
 
                     <TextView
+                        android:id="@+id/delivery_charges"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="₹0"
