--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -11,68 +11,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/background_white"
         android:layout_marginVertical="@dimen/_5sdp"
-        >
-
+        android:background="@drawable/background_white"
+        android:orientation="horizontal">
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                >
+                android:layout_marginTop="@dimen/_10sdp">
 
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/banana"
                     android:layout_gravity="center"
                     android:padding="@dimen/_5sdp"
-                    />
-
+                    android:src="@drawable/banana" />
 
 
             </androidx.cardview.widget.CardView>
 
 
             <TextView
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="QTY : 1"
-                android:textSize="@dimen/_10ssp"
-                android:textColor="@color/colorText"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/round_home"
-                android:padding="@dimen/_5sdp"/>
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_5sdp"
+                android:text="QTY : 1"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/_10ssp"
+                android:visibility="gone" />
 
 
         </LinearLayout>
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginHorizontal="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="vertical"
             app:ignore="MissingClass">
 
             <RelativeLayout
@@ -91,11 +84,11 @@
                     android:textSize="@dimen/_12ssp" />
 
                 <LinearLayout
-                    android:layout_alignParentRight="true"
-                    android:layout_marginHorizontal="@dimen/_10sdp"
                     android:id="@+id/IncDec"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="@dimen/_25sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginHorizontal="@dimen/_10sdp"
                     android:background="@drawable/round_add_new_address"
                     android:backgroundTint="@color/purple_500"
                     android:orientation="horizontal">
@@ -145,12 +138,11 @@
                 android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="quantity"
-                android:textSize="@dimen/_10ssp"
-                android:textColor="@color/colorText"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/sans_regular"/>
-
+                android:fontFamily="@font/sans_regular"
+                android:text="quantity"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/_10ssp" />
 
 
             <LinearLayout
@@ -163,166 +155,171 @@
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹45"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/sans_regular"/>
-
+                    android:fontFamily="@font/sans_regular"
+                    android:text="₹45"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_12ssp" />
 
 
                 <TextView
                     android:id="@+id/original_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹50"
-                    android:textSize="@dimen/_10ssp"
-                    android:textColor="@color/colorText"
+                    android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/sans_regular"
-                    android:layout_marginLeft="@dimen/_8sdp"/>
-
-
+                    android:text="₹50"
+                    android:textColor="@color/colorText"
+                    android:textSize="@dimen/_10ssp" />
 
 
                 <TextView
                     android:id="@+id/discount_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10%"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/white"
+                    android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:paddingHorizontal="@dimen/_10sdp"
-                    android:paddingVertical="@dimen/_2sdp"
                     android:background="@drawable/search_bg"
                     android:backgroundTint="@color/colorRed"
                     android:fontFamily="@font/sans_regular"
-                    android:layout_marginLeft="@dimen/_8sdp"/>
-
-
+                    android:paddingHorizontal="@dimen/_10sdp"
+                    android:paddingVertical="@dimen/_2sdp"
+                    android:text="10%"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
 
 
             </LinearLayout>
 
 
-<!--            <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
-<!--                android:id="@+id/number_button"-->
-<!--                android:layout_width="@dimen/_80sdp"-->
-<!--                android:layout_height="@dimen/_25sdp"-->
-<!--                app:backGroundColor="@color/colorPrimary"-->
-<!--                app:textSize="8sp"-->
-<!--                android:layout_marginTop="18dp"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                />-->
+            <!--            <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
+            <!--                android:id="@+id/number_button"-->
+            <!--                android:layout_width="@dimen/_80sdp"-->
+            <!--                android:layout_height="@dimen/_25sdp"-->
+            <!--                app:backGroundColor="@color/colorPrimary"-->
+            <!--                app:textSize="8sp"-->
+            <!--                android:layout_marginTop="18dp"-->
+            <!--                android:layout_centerHorizontal="true"-->
+            <!--                />-->
 
-<!--            <com.huynn109.IncreaseDecreaseButton-->
-<!--                android:id="@+id/inDeButton"-->
-<!--                app:activeIconColor="@color/increase_decrease_lib_active"-->
-<!--                app:minNumber="1"-->
-<!--                app:maxNumber="10"-->
-<!--                app:initNumber="2"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"/>-->
+            <!--            <com.huynn109.IncreaseDecreaseButton-->
+            <!--                android:id="@+id/inDeButton"-->
+            <!--                app:activeIconColor="@color/increase_decrease_lib_active"-->
+            <!--                app:minNumber="1"-->
+            <!--                app:maxNumber="10"-->
+            <!--                app:initNumber="2"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"/>-->
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
                 tools:context="com.travijuu.numberpicker.sample.MainActivity">
 
-<!--                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
-<!--                    -->
-<!--                    android:layout_width="@dimen/_80sdp"-->
-<!--                    android:layout_height="@dimen/_25sdp"-->
-<!--                    app:backGroundColor="@color/colorPrimary"-->
-<!--                    app:textSize="8sp"-->
-<!--                    android:layout_marginTop="18dp"-->
-<!--                    android:layout_centerHorizontal="true" />-->
+                <!--                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
+                <!--                    -->
+                <!--                    android:layout_width="@dimen/_80sdp"-->
+                <!--                    android:layout_height="@dimen/_25sdp"-->
+                <!--                    app:backGroundColor="@color/colorPrimary"-->
+                <!--                    app:textSize="8sp"-->
+                <!--                    android:layout_marginTop="18dp"-->
+                <!--                    android:layout_centerHorizontal="true" />-->
 
-<!--                <com.huynn109.IncreaseDecreaseButton-->
-<!--                    android:id="@+id/number_button"-->
-<!--                    app:activeIconColor="@color/increase_decrease_lib_active"-->
-<!--                    app:minNumber="1"-->
-<!--                    app:maxNumber="10"-->
-<!--                    app:initNumber="2"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"/>-->
+                <!--                <com.huynn109.IncreaseDecreaseButton-->
+                <!--                    android:id="@+id/number_button"-->
+                <!--                    app:activeIconColor="@color/increase_decrease_lib_active"-->
+                <!--                    app:minNumber="1"-->
+                <!--                    app:maxNumber="10"-->
+                <!--                    app:initNumber="2"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"/>-->
 
-<!--                <com.travijuu.numberpicker.library.NumberPicker-->
-<!--                    android:id="@+id/number_button"-->
-<!--                    android:layout_width="130dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    numberpicker:min="1"-->
-<!--                    numberpicker:max="20"-->
-<!--                    numberpicker:value="-5"-->
-<!--                    numberpicker:unit="1"-->
-<!--                    numberpicker:focusable="false"-->
-<!--                    numberpicker:custom_layout="@layout/number_picker_custom_layout" />-->
+                <!--                <com.travijuu.numberpicker.library.NumberPicker-->
+                <!--                    android:id="@+id/number_button"-->
+                <!--                    android:layout_width="130dp"-->
+                <!--                    android:layout_height="40dp"-->
+                <!--                    numberpicker:min="1"-->
+                <!--                    numberpicker:max="20"-->
+                <!--                    numberpicker:value="-5"-->
+                <!--                    numberpicker:unit="1"-->
+                <!--                    numberpicker:focusable="false"-->
+                <!--                    numberpicker:custom_layout="@layout/number_picker_custom_layout" />-->
 
 
             </LinearLayout>
-
 
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#E9EDF6"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="#E9EDF6" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
-
-                <ImageView
-                    android:layout_width="@dimen/_15sdp"
-                    android:layout_height="@dimen/_15sdp"
-                    android:src="@drawable/img_wishlist"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_3sdp"/>
-
-
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Move wishlist"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
-                    android:fontFamily="@font/sans_regular"
-                    android:padding="@dimen/_10sdp"
-                    android:textAlignment="center"/>
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_3sdp"
+                        android:src="@drawable/img_wishlist" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sans_regular"
+                        android:padding="@dimen/_10sdp"
+                        android:text="Move wishlist"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
 
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/colorGray"/>
+                    android:background="@color/colorGray" />
 
-
-                <ImageView
-                    android:layout_width="@dimen/_15sdp"
-                    android:layout_height="@dimen/_15sdp"
-                    android:src="@drawable/img_delete"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_5sdp"/>
-
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/remove_cart_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Remove"
-                    android:textSize="@dimen/_12ssp"
-                    android:textColor="@color/colorBlack"
-                    android:fontFamily="@font/sans_regular"
-                    android:padding="@dimen/_10sdp"/>
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:src="@drawable/img_delete" />
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/sans_regular"
+                        android:padding="@dimen/_10sdp"
+                        android:text="Remove"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12ssp" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
