--- a/app/src/main/res/layout/custom_items_in_cart.xml
+++ b/app/src/main/res/layout/custom_items_in_cart.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,9 +58,10 @@
             android:layout_gravity="center">
 
             <TextView
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Banana"
+                android:text=""
                 android:textSize="@dimen/_13ssp"
                 android:textColor="@color/colorBlack"
                 android:layout_marginTop="@dimen/_5sdp"
